retrive/objects/Invoice_Custom__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>        
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Price_Sum__c</fullName>
        <label>Net Price Sum</label>
        <summarizedField>Invoice_Line__c.Net_Price__c</summarizedField>
        <summaryForeignKey>Invoice_Line__c.Invoice_Custom__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices_Custom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Whole_Number__c</fullName>
        <label>Whole Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_of_invoice__c</fullName>
        <label>date of invoice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_payment__c</fullName>
        <label>date of payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>method_of_payment__c</fullName>
        <label>method of payment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sale_date__c</fullName>
        <label>sale date</label>
        <type>Date</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
		<columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Net_Price_Sum__c</columns>
        <columns>Gross_Price_Sum__c</columns>
        <columns>date_of_invoice__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>